methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:24: error: Unmatched closing brace '}' ignored here
}
^