methods.returning.MethodsReturning.scala.code
var seenBaggle = false
var sawBaggle = false

def haveBaggle():Boolean = {
  if (isOverBaggle()) {
    sawBaggle = true
    }
  if (sawBaggle) {
    seenBaggle = true
  }
  return seenBaggle


  
while (!isOverBaggle()) {
  forward()
  }
  haveBaggle()
  backward(7)
}
  
}